# landmower

./: .gitignore  Cargo.toml  build.rs  package-lock.json
src/: api.rs  lib.rs  links.rs  main.rs
webui/: .env  .env.production  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: api.ts  app.tsx  index.css  main.tsx  vite-env.d.ts
webui/src/components/: AddLinkForm.tsx  CopyButton.tsx  Footer.tsx  GenerateForm.tsx  ManageLinks.tsx  Navbar.tsx  Toasts.tsx
