[package]
name = "landmower"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
base64 = "0.22.1"
concurrent-queue = "2.5.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
