[package]
name = "landmower"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
axum-embed = "0.1.0"
base64 = "0.22.1"
concurrent-queue = "2.5.0"
dirs = "5.0.1"
http-body-util = "0.1.2"
rust-embed = { version = "8.6.0", features = ["compression"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
vector_assertions = "0.1.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
tokio = { version = "1.41.1", features = ["signal"] }
rand = "0.8.5"
