[package]
name = "landmower"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", default-features = false, features = ["json", "tokio", "http1"] }
axum-embed = "0.1.0"
base64 = "0.22.1"
concurrent-queue = "2.5.0"
dirs = "5.0.1"
http-body-util = "0.1.2"
minijinja = { version = "2.7.0", default-features = false }

rust-embed = { version = "8.6.0", features = ["compression"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
tokio = { version = "1.41.1", default-features = false, features = ["rt-multi-thread"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", default-features = false, features = ["trace"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = "0.3.19"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
vector_assertions = "0.1.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json"] }
tokio = { version = "1.41.1", default-features = false, features = ["signal", "test-util", "rt", "macros"] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
